feat: 增加高德瓦片地图支持

--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,10 @@
                     <button id="campus-yuquan" class="campus-btn" data-areaid="2143">玉泉校区</button>
                     <button id="campus-zjg" class="campus-btn" data-areaid="1774">紫金港校区</button>
                 </div>
+                <div class="map-selector">
+                    <button id="map-osm" class="map-switch-btn" data-map="osm" title="OpenStreetMap">OSM</button>
+                    <button id="map-gaode" class="map-switch-btn active" data-map="gaode" title="高德地图">高德</button>
+                </div>
                 <span id="update-time">加载中...</span>
                 <button id="refresh-btn" class="refresh-btn">刷新</button>
             </div>
