feat: 增加 google analysis

--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZJU 充电桩状态</title>
+    <!-- Google tag (gtag.js) -->
+    <!-- 下边一段代码是我自己的 Google 代码，如果你需要自己部署，请将 id 替换为你的 Google 代码 ！！！-->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YKMTD8L9D7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-YKMTD8L9D7');
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
