UI: 增加 Author 信息

--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,10 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
         <header class="bg-white rounded-lg shadow-md p-6 mb-6">
             <div class="flex flex-col lg:flex-row lg:items-center lg:justify-between gap-4">
-                <h1 class="text-2xl font-bold text-blue-600">ZJU 充电桩状态</h1>
+                <div class="flex items-end gap-3">
+                    <h1 class="text-2xl font-bold text-blue-600">ZJU Charger</h1>
+                    <span class="text-sm text-gray-500">by PhilFan</span>
+                </div>
                 <div class="flex flex-wrap items-center gap-3 lg:gap-4">
                     <div class="flex gap-2 flex-wrap">
                         <button id="campus-all" class="px-3 lg:px-4 py-2 rounded-md text-xs lg:text-sm font-medium transition-all duration-200 bg-blue-600 text-white border border-blue-600 hover:bg-blue-700" data-campus="">全部</button>
@@ -89,6 +92,7 @@
                     </svg>
                     <span class="text-sm font-medium">Email</span>
                 </a>
+                <span class="text-xs text-gray-500">本项目使用 <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-700 underline">GPLv3</a> 协议开源</span>
             </div>
         </div>
     </footer>
