--- a/web/index.html
+++ b/web/index.html
@@ -74,7 +74,6 @@
                                 <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
                                 <circle cx="12" cy="10" r="3"></circle>
                             </svg>
-                            <span class="hidden sm:inline">定位</span>
                         </button>
                         <button id="download-map-btn" class="flex items-center justify-center gap-2 px-4 py-2.5 rounded-md text-sm font-medium border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-200 hover:border-blue-600 dark:hover:border-blue-500 hover:bg-blue-50 dark:hover:bg-blue-900/30 hover:text-blue-600 dark:hover:text-blue-400 focus:outline-none focus:ring-2 focus:ring-blue-500 dark:focus:ring-blue-400 focus:border-blue-600 dark:focus:border-blue-500 transition-colors duration-200" title="下载地图">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -82,16 +81,9 @@
                                 <polyline points="7 10 12 15 17 10"></polyline>
                                 <line x1="12" y1="15" x2="12" y2="3"></line>
                             </svg>
-                            <span class="hidden sm:inline">下载地图</span>
                         </button>
                     </div>
-                    <div class="flex items-center gap-2 flex-1 sm:flex-none justify-center sm:justify-end">
-                        <label class="text-sm text-gray-600 dark:text-gray-400 whitespace-nowrap hidden sm:inline">地图服务：</label>
-                        <select id="map-selector" class="px-3 py-2 rounded-md text-sm font-medium border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-200 hover:border-blue-600 dark:hover:border-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-500 dark:focus:ring-blue-400 focus:border-blue-600 dark:focus:border-blue-500 transition-colors duration-200 min-w-[120px] sm:min-w-[140px]">
-                            <option value="gaode" selected>高德地图</option>
-                            <option value="osm">OpenStreetMap</option>
-                        </select>
-                    </div>
+                    <!-- 地图服务选择器已移除，现在使用图层控制器切换 -->
                 </div>
             </div>
             
