fix: 更换 js 的 CDN

--- a/web/index.html
+++ b/web/index.html
@@ -130,8 +130,8 @@
     </div>
     
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="https://cdn.bootcss.com/proj4js/2.4.3/proj4.js"></script>
-    <script src="https://cdn.bootcss.com/proj4leaflet/1.0.1/proj4leaflet.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.19.10/proj4.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4leaflet/1.0.2/proj4leaflet.min.js"></script>
     <script src="leaflet.ChineseTmsProviders.js"></script>
     <script src="https://unpkg.com/leaflet-easyprint@2.1.9/dist/bundle.js"></script>
     <script src="leaflet-coord-transform.js"></script>
